# Talos

./: .gitignore  CONTRIBUTE.md  CONTRIBUTING.md  Dockerfile  Dockerfile-prod  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.reloading.yml  docker-compose.yml  requirements.txt  setup.cfg  setup.py
.github/: label-pr.yml  labeler.yml
.github/workflows/: aws-deploy.yml  greetings.properties.json  greetings.yml  labeler.properties.json  labeler.yml  pr-labeler.yml  python-package.properties.json  python-package.yml  talos-deploy.yml  talos-package.yml
.github/workflows/greetings/: greetings.yml
.github/workflows/pr-labeler/: pr-labeler.yml
ai_bot/: bot.py  exceptions.py  help_info.py  requirements.txt  utils.py
ai_bot/dl_utils/: helpers.py
ai_bot/dl_utils/vision/: visualise.py
ai_bot/extensions/: env.py  helpers.py  mask_rcnn.py  vision.py
ai_bot/rl_utils/: agent.py  helpers.py
talos/: __main__.py  bot.py  exceptions.py  help_info.py  helpers.py  models.py
talos.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
talos/dl_utils/vision/: mask_rcnn.py
talos/extensions/: env.py  kaggle_cog.py  kgl.py  vision.py
talos/rl_utils/: agent.py
