[metadata]
name = Talos
version = attr: talos.__version__
description = A Discord bot for managing an AI server
long_description = file: README.md
long_description_content_type = text/markdown
author = CYBrAIners
author_email = npitsillos@gmail.com
url = https://github.com/npitillos/Talos
license = GPL-3.0
classifiers = 
    Development Status :: 3 - Alpha
    Framework :: AsyncIO
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6

[options]
packages = find_namespace:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    talos=talos.__main__:run_bot
    talos-setup=talos.setup:run_cli

[options.packages.find]
include =
    talos
    talos.*